<resources>
    <string name="app_name">hair hook</string>
    <string name="crazy_studio">Ronosoft studio</string>
    <string name="HaveAccount">Already have an Account?</string>
    <string name="create_account">Create a new Account</string>
    <string name="don_t_have_an_account">don\'t have an account</string>
    <string name="have_an_account">I have an account?</string>
    <string name="login">Login</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="sign_up">Sign up</string>
    <string name="item_name">Item Name</string>
    <string name="try_again">TRY AGAIN</string>

    <string name="wait">Wait</string>
    <string name="ok">OK</string>
    <string name="name">Name</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="number">Number</string>
    <string name="upload">Upload</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="bio">bio</string>
    <string name="tell_me_about_your_self">Tell me about your self</string>
    <string name="profile">Profile</string>
    <string name="PhoneNumber">Phone number</string>
    <string name="if_your_change_amy_things_in_profile_your_can_tap_on_profile">If your change anything in profile your can tap on the profile icon</string>
    <string name="Theme">Theme</string>
    <string name="changes">Change</string>
    <string name="todo">TODO</string>
    <string name="user">User</string>
    <string name="enter_login_pass">enter login pass</string>
    <string name="make_pin_for_secure_your_privacy">Make Pin to Secure Your Privacy</string>
    <string name="first_make_fake_pin">First Make fake-PIN</string>
    <string name="pin_star">****</string>
    <string name="make_real_pin">Make Real-PIN</string>
    <string name="tap_make_pin">Tap make pin</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_us">Contact Us</string>

    <string name="terms_amp_privacy_policy"><![CDATA[Terms & Privacy Policy]]></string>
    <string name="accept_terms_and_conditions">Accept Terms and Conditions <a href="https://crazy-studio-website.web.app/PrivacyPolicy.html">Read More</a></string>
    <string name="read_more"><a href="https://crazy-studio-website.web.app/PrivacyPolicy.html">Read More</a></string>
    <string name="public_group_chating">Public Group Chating</string>
    <string name="icon">Icon</string>
    <string name="otp">OTP</string>


    <string name="otp_title">Please enter the 6 digit verification code</string>
    <string name="otp_button_text">VERIFY</string>
    <string name="resend_msg">Didn’t receive the OTP?</string>
    <string name="resend_again_msg">Resend again</string>
    <string name="sent_to_91_xxxx_xxx">sent to +91 XXXX XXX</string>
    <string name="change">Change</string>
    <string name="phone_number">Phone Number</string>
    <string name="tap_to_go">Tap to go</string>
    <string name="text_o">view</string>
    <string name="icon_of_camrea">icon of camrea</string>
    <string name="pdf_icon">Pdf Icon</string>
    <string name="copy_name">Copy Name</string>
    <string name="copy_number">Copy Number</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="tap_to_add_new_story">Tap to add new Story</string>
    <string name="tap_to_change_colors">Tap To Change Colors</string>
    <string name="Select_the_language">Select the language</string>
    <string name="save">Save</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="tap_to_replay">Tap to reply</string>
    <string name="enter_subject_name">Enter Subject Name</string>
    <string name="tap_to_open_in_full_screen">Tap to open in full screen</string>
    <string name="tap_to_copy_the_link">Tap to copy the link</string>
    <string name="tap_to_add_new_material">Tap to add new material</string>
    <string name="cancel">Cancel</string>
    <string name="tap_to_open_photo_gallery">Tap to open photo gallery</string>
    <string name="tap_to_open_camera">Tap to open Camera</string>
    <string name="tap_to_select_the_image_your_want_to_edit">Tap to Select the image your want to edit</string>
    <string name="problem">Problem</string>
    <string name="example">example</string>
    <string name="include_device_informotion">Include device informotion</string>
    <string name="report_a_bug">Report a Bug</string>
    <string name="open">OPEN</string>
    <string name="Download">Download</string>
    <string name="delete_message">Delete Message?</string>
    <string name="delete_for_me">Delete for me</string>
    <string name="delete_for_everyone" translatable="false">Delete for everyone</string>
    <string name="clear_chat">clear chat</string>
    <string name="tap_select_view_images" translatable="false">Tap Select View Images</string>
    <string name="preview_theme">Preview Theme</string>
    <string name="set">Set</string>
    <string name="x" translatable="false">X</string>
    <string name="about_user_info" translatable="false">About User Info</string>
    <string name="user_share_file" translatable="false">User Share File</string>
    <string name="username_email_or_phone_number" translatable="false">Username, email or phone number</string>
    <string name="password_otp" translatable="false">Password, OTP</string>
    <string name="username">Username</string>
    <string name="next">Next</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="set_up_account">Set up account</string>
    <string name="you_can_change_latter">You can change latter</string>
    <string name="chose_username">Chose username</string>
    <string name="get_help_in_login"><a href="https://crazy-studio-website.web.app/PrivacyPolicy.html">get help in login</a></string>
    <string name="recommended_to_following" translatable="false">recommended to following </string>
    <string name="user_dp" translatable="false">User DP</string>
    <string name="follow" translatable="false">Follow</string>
    <string name="post" translatable="false">Post</string>
    <string name="menu_icon_description" translatable="false">Open Settings Menu</string>
    <string name="like_icon_description" translatable="false">Like</string>
    <string name="comment_icon_description" translatable="false">Comment</string>
    <string name="share_icon_description" translatable="false">Share</string>
    <string name="chat">Chat</string>
    <string name="coding">Coding</string>
    <string name="for_me">For me</string>
    <string name="_new">NEW</string>
    <string name="title_activity_follow_manger">FollowMangerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="following">Following...</string>
    <string name="we_should_not_any_account_to_recommended">We should not any account to recommended</string>
    <string name="tap_to_go_next_srceen">Tap to go next srceen</string>
    <string name="update_profile">Update Profile</string>
    <string name="add_link">+ add Link</string>
    <string name="title">Title</string>
    <string name="link">link</string>
    <string name="add">Add</string>
    <string name="show_links">Show links</string>
    <string name="add_links">Add Links</string>
    <string name="tap_edit_or_remove_link">Tap Edit or remove link.</string>
    <string name="remove">remove</string>
    <string name="show_media_links">Show Media links</string>
    <string name="show_contact_phone">Show Contact Phone</string>
    <string name="show_custom_button">Show Custom button -------></string>
    <string name="show_custom_button_hint_text">Tap to see how your profile look like and you change text or action on button  \n</string>
    <string name="show_contact_e_mail">Show Contact E-mail</string>
    <string name="sync_with_another_apps">Sync with another apps</string>
    <string name="set_up_backup_service">Set up backup service</string>
    <string name="show_on_profile">show on profile</string>
    <string name="upload_a_profile_picture">Upload a profile picture</string>
    <string name="set_the_phone_number">set the Phone number</string>
    <string name="with_country_code">with country code</string>
    <string name="set_the_e_mail">set the E-mail</string>
    <string name="e_mail">E-mail</string>


</resources>