<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/roundlayoput"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/textview"
        android:text="@string/delete_message"
        android:textSize="@dimen/_23ssp"
        android:layout_margin="@dimen/_14sdp"
        android:textColor="@color/MainTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/deleteForEveryBody"
            android:text="@string/delete_for_everyone"
            android:textSize="@dimen/_20ssp"
            android:layout_below="@id/textview"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_9sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:textColor="@color/green_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/deleteForMe"
            android:text="@string/delete_for_me"
            android:textSize="@dimen/_20ssp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/deleteForEveryBody"
            android:layout_marginEnd="@dimen/_9sdp"
            android:layout_marginTop="@dimen/_9sdp"
            android:textColor="@color/green_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/cancel_action_"
        android:text="@string/cancel"
        android:textSize="@dimen/_20ssp"
        android:layout_below="@id/deleteForMe"
        android:layout_marginEnd="@dimen/_21sdp"
        android:layout_marginTop="@dimen/_9sdp"
        android:layout_alignParentEnd="true"
        android:textColor="@color/green_text"
        android:layout_width="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"

        android:layout_height="wrap_content"/>

</RelativeLayout>