<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainBackgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SignUpUsername">



    <TextView
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:textColor="@color/MainTextColor"
        android:text="@string/chose_username"
        android:textAlignment="center"
        android:textSize="@dimen/_25ssp"
        android:layout_width="match_parent"
        android:id="@+id/ViewText"
        android:layout_height="wrap_content"/>


    <TextView
        android:textColor="@color/HintMainTextColor"
        android:text="@string/you_can_change_latter"
        android:textAlignment="center"
        android:textSize="@dimen/_15ssp"
        android:layout_below="@id/ViewText"
        android:id="@+id/hintView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/Field"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_below="@id/hintView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/NameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:hintTextColor="@color/HintMainTextColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:inputType="textPersonName"
                android:textColor="@color/MainTextColor"
                android:textColorHint="@color/MainTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/next"
            android:textSize="@dimen/_13ssp"
            android:enabled="false"
            android:id="@+id/Next"
            android:textColor="@color/FixColorWhite"
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>