<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_5sdp"
    android:orientation="vertical"
    tools:context=".fragment.HomeFragment">


    <com.google.android.material.chip.ChipGroup
        app:singleSelection="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipNew"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_new" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipForMe"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_me" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCoding"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coding" />

    </com.google.android.material.chip.ChipGroup>







    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/epoxyRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="24dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="7"
        tools:listitem="@layout/post_layout" />

</LinearLayout>