<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/MainBackgroundColor"
    tools:context=".fragment.SignInFragment">


    <ImageView
        android:id="@+id/loginIcon"
        android:src="@drawable/adduser"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:contentDescription="@string/icon" />

    <TextView
        android:layout_width="60dp"
        android:id="@+id/indan"
        android:layout_marginTop="25dp"
        android:layout_below="@id/loginIcon"
        android:layout_alignParentStart="true"
        android:text="+91"
        android:background="@drawable/number"
        android:textSize="32sp"
        android:textColor="@color/MainTextColor"
        android:layout_marginStart="30dp"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:layout_height="60dp"/>

    <EditText
        android:id="@+id/Number"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/loginIcon"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:layout_toEndOf="@+id/indan"
        android:autofillHints=""
        android:background="@drawable/number"
        android:hint="123 456 7890"
        android:inputType="phone"
        android:maxLength="10"
        android:paddingStart="12dp"
        android:textColor="@color/MainTextColor"
        android:textColorHint="@color/MainTextColor"
        android:textSize="32sp"
        tools:ignore="RtlSymmetry" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Number"
        android:layout_marginStart="40dp"
        android:layout_marginTop="19dp"
        android:autoLink="web"
        android:text="@string/accept_terms_and_conditions"
        android:textColor="@color/MainTextColor" />

    <TextView
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Number"
        android:layout_marginStart="8dp"
        android:layout_marginTop="33dp"
        android:layout_toEndOf="@+id/checkBox"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/read_more"
        android:textColor="@color/Link" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/roundcolorbutton"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:theme="@style/Theme.FriendCircle.bts"
        android:textAlignment="center"
        android:textSize="22sp"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/checkBox"
        android:layout_width="wrap_content"
        android:text="@string/next" />
    <LinearLayout
        android:layout_below="@id/login"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/loginWithGoogle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/google_icon"
            app:riv_oval="true" />
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/loginWithGithub"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/github_icon"
            app:riv_oval="true" />
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/loginWithEmailOrPass"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:background="@color/iconBackEmailOrPass"
            app:riv_mutate_background="true"
            android:src="@drawable/email_icon"
            app:riv_oval="true" />
    </LinearLayout>
    <TextView
        android:id="@+id/getHelp"
        android:linksClickable="true"
        android:autoLink="web"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:textSize="@dimen/_15sdp"
        android:textColorLink="@color/Link"
        android:layout_height="wrap_content"
        android:text="@string/get_help_in_login"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>